<?xml version="1.0"?>
<package>
  <name>xbot_blockly</name>
  <version>0.1.0</version>
  <description>A ROS package that simplifies robot interaction using web interfaces</description>

  <author email="contact@i-helal.com">Ibrahim Helal</author>
  <maintainer email="contact@i-helal.com">Ibrahim Helal</maintainer>

  <license>GPLv3</license>

  <build_depend>std_msgs</build_depend> 
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <buildtool_depend>catkin</buildtool_depend>  
  <buildtool_depend>message_runtime</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
